# Flash-Quiz-Instant-Document-to-Quiz

./: .gitignore  README.md
Backend/: EnvExample.txt  Requirements.txt  agent.py  config.py  database.py  main.py  pyproject.toml
Backend/Api/Models/: reg_user.py
Backend/Api/Router/: authenticater.py  protected_router.py  quiz_router.py  user_router.py
Backend/Api/Schemas/: user_schemas.py
Backend/Api/Security/: Oath2.py
Backend/Services/: agent_service.py  auth_service.py  rag_service.py  user_service.py
Frontend/QuizUI/: index.html  package-lock.json  package.json
Frontend/QuizUI/src/: App.jsx  main.jsx
Frontend/QuizUI/src/Components/: ProtectedRoute.jsx
Frontend/QuizUI/src/Components/ErrorBoundary/: ErrorBoundary.css  ErrorBoundary.jsx
Frontend/QuizUI/src/Components/FloatingChat/: FloatingChat.css  FloatingChat.jsx
Frontend/QuizUI/src/Components/Layout/: AppLayout.css  AppLayout.jsx
Frontend/QuizUI/src/assets/styles/: global.css
Frontend/QuizUI/src/context/: authContext.jsx
Frontend/QuizUI/src/pages/: dashboard.jsx  landingPage.css  landingPage.jsx  loginPage.jsx  quizPage.jsx  resultPage.jsx
Frontend/QuizUI/src/pages/Auth/: Auth.css  loginPage.css  loginPage.jsx  signupPage.jsx
Frontend/QuizUI/src/pages/Dashboard/: Dashboard.css  Dashboard.jsx
Frontend/QuizUI/src/pages/Error/: NotFound.css  NotFound.jsx
Frontend/QuizUI/src/pages/Flashcards/: Flashcards.css  Flashcards.jsx
Frontend/QuizUI/src/pages/Quiz/: Quiz.css  Quiz.jsx
Frontend/QuizUI/src/services/: api.js
Frontend/QuizUI/src/utils/: formatters.js
(+7 files in other folders)
