[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.127.0",
    "passlib[argon2]>=1.7.4",
    "scalar-fastapi>=1.5.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
]
