[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi[all,standard]>=0.127.0",
    "python-jose[cryptography]",
    "passlib[argon2]>=1.7.4",
    "scalar-fastapi>=1.5.0",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.27",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.2",
    "chromadb>=1.3.7",
    "pypdf>=6.5.0",
    "python-multipart>=0.0.21",
    "langchain-text-splitters>=1.1.0",
    "autogen-ext[gemini,mcp]>=0.7",
    "pydantic>=2.12.5",
    "autogen-agentchat[gemini]>=0.7",
    "python-dotenv>=1.2.1",
    "autogen-core>=0.7.5",
    "openai>=2.14.0",
    "tiktoken>=0.12.0",
    "langchain-chroma>=1.1.0",
    "sentence-transformers>=5.2.0",
    "langchain-huggingface>=1.2.0",
]
